[package]
name = "todo_demo_in_actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
dotenv = "0.15.0"
mime = "0.3.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
